# Nutrition

./: .gitignore  README.md  courses.json  diet.py  list_of_ingridients.csv  pyproject.toml
nutrition/: __init__.py  cli.py  macros.py  models.py  planner.py  shopping.py  storage.py
tests/: test_macros.py  test_models.py  test_planner.py  test_shopping.py  test_storage.py
